20090222
	appl/cmd/ndb/registry.b and dis/registry.dis - implement flush for event file (issue 162)
20090217
	appl/cmd/limbo/stubs.b limbo/stubs.c - include length parameter to builtinmod (could just be 0 in most cases)
	change f->ret/destroy code in stubs.c/stubs.b to destroy correctly in case of exceptions
20090202
	emu/port/win-x11a.c: might as well try this everywhere now
20090127
	libinterp/xec.c: fix gc problem with self
20090122
	libinterp/string.c: slicer can return H for empty slice after bounds check (brucee)
20081119
	os/pc/^(main.c fns.h) more idle idlehands
20081112
	emu/Linux/asm-arm.S old failure to use different regs for swp finally changed here
	libmath/blas.c compensate for gcc bug on arm
20081107
	replace calls to calloc by malloc
20081106
	os/port/dis.c prevent new spawns during killgrp
	also synchronise two killgrps of the same group
20081105
	emu/port/dis.c prevent new spawns during killgrp [#117]
20081022
	sh: ignore leading white space in fail: strings, and change empty tail to "failed"
	/emu/port/devfs-posix.c don't call readdir after it has returned end of file
20081021
	/appl/cmd/auth/ai2key.b new command to convert authinfo files to factotum keys
	/appl/cmd/auth/factotum/proto/infauth.b allow new key format
20081019
	/appl/cmd/man2html.b implement "\ " => "&nbsp;"
	/man/3/prog change way a literal " was formatted
	/man/8/srv deleted (obsolete)
	removed reference to srv(8) from sys-pctl(2)
20080909
	/appl/cmd/puttar.b add extra empty block at end of archive as required by format
20080907
	include some changes from acme-sac in emu/Nt/devfs.c; need further control of usesec (or discard it)
20080723
	rename Inferno's yacc to iyacc to avoid clash with system's own (now that Linux and others distribute it)
20080707
	update emu/port/win-x11a.c (fix someone's earlier patch to stop using undefined value)
	emu/port/main.c mark obsolete options and remove from usage
20080705